# RESSPECT

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt  resspectdb.sql  setup.cfg  setup.py  tox.ini
.github/workflows/: asv-main.yml  docker-build.yml  e2e-tests.yml  testing-and-coverage.yml  unit-tests.yml
actsnclass/: __init__.py  classifiers.py  cosmo_metric.py  database.py  learn_loop.py  query_strategies.py  snana_fits_to_pd.py  time_domain.py
actsnclass/snanapipe/: snana_hook.py
auxiliary_files/: cosmo.stan  salt3pipeinput_template.txt
auxiliary_files/baseinputs/: SALT2mu.default  perfect_sim_v1.nml  snfit_base.nml
auxiliary_files/kcor/: kcor_LSST.fits
benchmarks/: asv.conf.json  benchmarks.py
data/tests/: Bazin.csv  general_hot_features_day_2.csv  lc_mjd_flux.csv  test_features.csv
docker/: Dockerfile  docker-compose.yml  resspectdb.sql
docker_resspect/: requirements.txt
docs/: canonical.rst  conf.py  contribute.rst  index.rst  learn_loop.rst  plotting.rst  pre_processing.rst  prepare_time_domain.rst  reference.rst
docs/images/: sample_canonical.csv
example_scripts/: build_canonical_plasticc.py  build_canonical_snpcc.py
resspect/: __init__.py  batch_functions.py  bazin.py  build_plasticc_canonical.py  build_plasticc_metadata.py  build_snpcc_canonical.py  bump.py  classifiers.py  cosmo_metric.py  cosmo_metric_utils.py  database.py  exposure_time_calculator.py  fit_lightcurves.py  learn_loop.py  lightcurves_utils.py  metrics.py  plot_results.py  query_budget_strategies.py  query_strategies.py  read_dash.py  readme.rst  request_webservice_elasticc.py  salt3_utils.py  samples_utils.py  snana_fits_to_pd.py  testing.py  time_domain.py  time_domain_PLAsTiCC.py  time_domain_SNPCC.py  time_domain_loop.py  time_domain_plasticc.py  time_domain_snpcc.py  tom_client.py  update_stashes.py
resspect/feature_extractors/: bazin.py  bump.py  light_curve.py  malanchev.py
resspect/scripts/: __init__.py  build_canonical.py  build_time_domain.py  build_time_domain_SNPCC.py  build_time_domain_plasticc.py  build_time_domain_snpcc.py  calculate_cosmology_metric.py  example_budget.ipynb  fit_dataset.py  make_metrics_plots.py  run_loop.py  run_time_domain.py  subsample_epochs.py
resspect/snanapipe/: snana_hook.py
resspect/tests/: conftest.py  test_batch_functions.py  test_bazin.py  test_bump.py  test_command_line.py  test_cosmo_metric_utils.py  test_database.py  test_example.py  test_fit_lightcurves.py  test_fixtures.py  test_learn_loop.py  test_metrics.py  test_testing.py
resspect/utils/: bazin_utils.py  bump_utils.py
src/resspect/: __init__.py  base_configuration.py  batch_functions.py  bazin.py  build_plasticc_canonical.py  build_plasticc_metadata.py  build_snpcc_canonical.py  bump.py  classifier_registry.py  classifiers.py  cosmo_metric_utils.py  database.py  exposure_time_calculator.py  filter_sets.py  fit_lightcurves.py  learn_loop.py  lightcurves_utils.py  loop_configuration.py  metrics.py  plot_results.py  plugin_utils.py  query_budget_strategies.py  query_strategies.py  read_dash.py  salt3_utils.py  samples_utils.py  snana_fits_to_pd.py  time_domain_configuration.py  time_domain_loop.py  time_domain_plasticc.py  time_domain_snpcc.py  tom_client.py  update_stashes.py
src/resspect/feature_extractors/: bazin.py  bump.py  feature_extractor.py  feature_extractor_utils.py  light_curve.py  malanchev.py
src/resspect/scripts/: __init__.py  build_canonical.py  build_time_domain_plasticc.py  build_time_domain_snpcc.py  calculate_cosmology_metric.py  fetch_example_data.py  fit_dataset.py  make_metrics_plots.py  run_loop.py  run_time_domain.py
src/resspect/snanapipe/: samplerun.py
tests/: conftest.py  run-snpcc-e2e.sh  test_batch_functions.py  test_bazin.py  test_bump.py  test_cli_scripts.py  test_cosmo_metric_utils.py  test_database.py  test_fit_lightcurves.py  test_learn_loop.py
tests/resspect/: conftest.py  test_bazin.py  test_bump.py  test_cosmo_metric_utils.py  test_database.py  test_feature_extractor_utils.py  test_fit_lightcurves.py  test_learn_loop.py  test_lightcurve_utils.py  test_loop_configuration.py  test_metrics.py  test_plugin_utils.py  test_query_strategies.py  test_sample_utils.py  test_time_domain_configuration.py  test_time_domain_loop.py
