[build-system]
requires = ["setuptools>=65.5.0", "wheel"]

[project]
name = "resspect"
version = "0.1.0"
description = "resspect - Recommendation System for Spectroscopic Follow-up"
readme = "README.md"
authors = [
    { name = "The RESSPECT team", email = "contact@cosmostatistics-initiative.org" }
]
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "flask==2.1.1",
    "astropy>=5.2.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.2",
    "pandas>=1.5.3",
    "progressbar2>=4.2.0",
    "pytest>=7.2.1",
    "scikit_learn>=1.2.1",
    "scipy>=1.10.0",
    "seaborn>=0.12.2",
    "xgboost>=1.7.3",
    "iminuit>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/COINtoolbox/resspect"
Source = "https://github.com/COINtoolbox/resspect"

[project.scripts]
build_canonical = "resspect.scripts.build_canonical:main"
build_time_domain_snpcc = "resspect.scripts.build_time_domain_snpcc:main"
build_time_domain_plasticc = "resspect.scripts.build_time_domain_plasticc:main"
calculate_cosmology_metric = "resspect.scripts.calculate_cosmology_metric:main"
fit_dataset = "resspect.scripts.fit_dataset:main"
make_metrics_plots = "resspect.scripts.make_metrics_plots:main"
run_loop = "resspect.scripts.run_loop:main"
run_time_domain = "resspect.scripts.run_time_domain:main"

[tool.setuptools.packages.find]
include = ["resspect"]

[tool.pytest]
addopts = ["--pyargs"]