[project]
name = "resspect"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "The RESSPECT team", email = "contact@cosmostatistics-initiative.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "flask==2.3.2",
    "astropy>=5.2.1",
    "matplotlib>=3.7.0",
    "numpy>=1.24.2",
    "pandas>=1.5.3",
    "progressbar2>=4.2.0",
    "pytest>=7.2.1",
    "scikit_learn>=1.2.1",
    "scipy>=1.10.0",
    "seaborn>=0.12.2",
    "xgboost>=1.7.3",
    "iminuit>=1.20.0",
    "light_curve>=0.8.1",
    "requests",
    "pooch",
]

[project.urls]
Homepage = "https://github.com/COINtoolbox/resspect"
Source = "https://github.com/COINtoolbox/resspect"

[project.scripts]
build_canonical = "resspect.scripts.build_canonical:main"
build_time_domain_snpcc = "resspect.scripts.build_time_domain_snpcc:main"
build_time_domain_plasticc = "resspect.scripts.build_time_domain_plasticc:main"
calculate_cosmology_metric = "resspect.scripts.calculate_cosmology_metric:main"
fetch_example_data = "resspect.scripts.fetch_example_data:fetch_example_data"
fit_dataset = "resspect.scripts.fit_dataset:main"
make_metrics_plots = "resspect.scripts.make_metrics_plots:main"
run_loop = "resspect.scripts.run_loop:main"
run_time_domain = "resspect.scripts.run_time_domain:main"

[project.optional-dependencies]
dev = [
    "asv==0.6.4", # Used to compute performance benchmarks
    "jupyter", # Clears output from Jupyter notebooks
    "pre-commit", # Used to run checks before finalizing a git commit
    "pytest",
    "pytest-cov", # Used to report total code coverage
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/resspect/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 110
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 110

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # docstrings
    "D101",
    "D102",
    "D103",
    "D106",
    "D206",
    "D207",
    "D208",
    "D300",
    "D417",
    "D419",
    # Numpy v2.0 compatibility
    "NPY201",
]

ignore = [
    "UP006", # Allow non standard library generics in type hints
    "UP007", # Allow Union in type hints
    "SIM114", # Allow if with same arms
    "B028", # Allow default warning level
    "SIM117", # Allow nested with
    "UP015", # Allow redundant open parameters
    "UP028", # Allow yield in for loop
]

[tool.coverage.run]
omit=["src/resspect/_version.py"]
